--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Wix.com",
   "license": "MIT",
   "dependencies": {
+    "@shopify/flash-list": "^1.7.0",
     "hoist-non-react-statics": "^3.3.1",
     "lodash": "^4.17.15",
     "memoize-one": "^5.2.1",
@@ -53,8 +54,8 @@
     "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.170",
     "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
     "@types/react-native": "^0.64.19",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/xdate": "^0.8.32",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
